Added JPA Violation handling and got PatchBadName passing after fixing the 204 to become transactional error